--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Waysme - Creative Agency, Personal Portfolio Template</title>
+    <title>UGB</title>
     <link rel="favicon icon" href="images/favicon.png">
 
     <!-- Fonts -->
