--- a/index.html
+++ b/index.html
@@ -30,45 +30,11 @@
     <div class="mobile-nav-wrapper">
       <div class="mobile-menu-inner">
         <ul class="mobile-menu">
-          <li class="has-sub"><a href="#">Home <i class="sub-icon fa fa-angle-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="main-demo.html">Main Demo</a></li>
-              <li><a href="main-light-demo.html">Main Light Demo</a></li>
-              <li><a href="main-dark-demo.html">Main Dark Demo</a></li>
-              <li><a href="creative-agency-demo.html">Creative Agency Demo</a></li>
-              <li><a href="personal-light-demo.html">Personal Light Demo</a></li>
-              <li><a href="personal-dark-demo.html">Personal Dark Demo</a></li>
-              <li><a href="minimal-light-demo.html">Minimal Light Demo</a></li>
-              <li><a href="minimal-dark-demo.html">Minimal Dark Demo</a></li>
-            </ul>
-          </li>
-          <li class="has-sub"><a href="#">Services <i class="sub-icon fa fa-angle-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="services.html">Services</a></li>
-              <li><a href="single-service.html">Service Details</a></li>
-            </ul>
-          </li>
-          <li class="has-sub"><a href="#">Projects <i class="sub-icon fa fa-angle-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="projects.html">Projects</a></li>
-              <li><a href="single-project.html">Single Project</a></li>
-            </ul>
-          </li>
-          <li class="has-sub"><a href="#">Pages <i class="sub-icon fa fa-angle-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="error-page.html">404 Error Page</a></li>
-            </ul>
-          </li>
-          <li class="has-sub"><a href="#">Blog Entries <i class="sub-icon fa fa-angle-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="blog.html">Blog Entries</a></li>
-              <li><a href="single-post.html">Single Post</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">about us</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
     </div>
